--- a/assets/stylesheets/airtame.css
+++ b/assets/stylesheets/airtame.css
@@ -3,6 +3,9 @@ h1, h2, p {
   
 }
 
+body {
+  background: rgb(245, 245, 245);
+}
 h1 {
   font-size: 80px;
 }
@@ -83,8 +86,8 @@ p {
 }
 
 .card {
-  background-color: #fcfcfc;
   box-shadow: 0px 0px 2px 0px #5E5E5E;
+  background-color: #fcfcfc;
   margin: 1rem 0;
 }
 
