--- a/assets/stylesheets/airtame.css
+++ b/assets/stylesheets/airtame.css
@@ -7,16 +7,26 @@ body {
   background: rgb(245, 245, 245);
 }
 h1 {
-  font-size: 80px;
+  font-size: 8rem;
 }
 
 h2 {
-  font-size: 40px;
+  font-size: 4rem;
   margin: 3rem;
 }
 
+@media screen and (max-width : 345px) {
+  p {
+    font-size: 1.8rem;
+  }
+}
+@media screen and (min-width : 320px) {
+  p {
+    font-size: 2rem;
+  }
+}
+
 p {
-  font-size: 20px;
   margin: 0 10%;
 }
 
