--- a/assets/stylesheets/airtame.css
+++ b/assets/stylesheets/airtame.css
@@ -135,9 +135,12 @@ p {
   border-radius: 150px;
   background-position: center center;
   background-repeat: no-repeat;
-  margin: 2rem;
-  height: 300px;
-  width: 300px;
+  height: 171px;
+  width: 171px;
+}
+
+.center {
+  margin: 0 auto;
 }
 
 .footer {
