--- a/assets/stylesheets/airtame.css
+++ b/assets/stylesheets/airtame.css
@@ -135,12 +135,10 @@ p {
   border-radius: 150px;
   background-position: center center;
   background-repeat: no-repeat;
-  height: 171px;
-  width: 171px;
-}
-
-.center {
-  margin: 0 auto;
+  margin-bottom: 2rem;
+  margin-top: 2rem;
+  height: 300px;
+  width: 300px;
 }
 
 .footer {
