Mod: Like seems more natural now.

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -100,8 +100,14 @@ p {
   color: #fcfcfc;
 }
 
+.hover-mask-liked {
+  background: rgba(0,0,0,.2);
+  opacity:.8;
+
+}
+
 .hover-mask:hover {
-  background: rgba(0,0,0,.1);
+  background: rgba(0,0,0,.3);
   opacity: 1;
 }
 
@@ -114,8 +120,11 @@ p {
 }
 
 .card {
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
   background-color: #fcfcfc;
-  box-shadow: 0px 0px 2px 0px #5E5E5E;
+  /*box-shadow: 0px 0px 1px 0px #5E5E5E;*/
   margin: 1rem 0;
 }
 
