--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -145,15 +145,26 @@ p {
   /*-webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
   -moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
   box-shadow: 0 0 8px rgba(0, 0, 0, .8);*/
-  -webkit-border-radius: 150px;
-  -moz-border-radius: 150px;
-  border-radius: 150px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
   background-position: center center;
   background-repeat: no-repeat;
   margin-bottom: 2rem;
   margin-top: 2rem;
   height: 300px;
   width: 300px;
+}
+
+.btn-circle {
+  background: #66FF00;
+  width: 70px;
+  height: 70px;
+  padding: 10px 16px;
+  font-size: 24px;
+  line-height: 1.33;
+  text-align: center;
+  border-radius: 35px;
 }
 
 .footer {
