--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -141,6 +141,10 @@ p {
   margin-top: 1rem;
 }
 
+.category-title {
+  text-align: center;
+}
+
 .circular {
   /*-webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
   -moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
