--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -1,5 +1,4 @@
 h1, h2, p {
-  text-align: center;
   font-family: 'Open Sans', arial,sans-serif;
 }
 
@@ -9,6 +8,7 @@ body {
   
 }
 h1 {
+  text-align: center;
   font-size: 8rem;
 }
 
@@ -22,44 +22,11 @@ p {
   margin: 0 10%;
 }
 
-/*
- * Deals with the text size on different screens.
- */
-@media screen and (max-width : 991px) {
-  h2 {
-    font-size: 5rem;
-    margin: 2rem 3rem;
-  }
-  p {
-    font-size: 3rem;
-  }
-}
-@media screen and (min-width: 570px) {
-  .card-title {
-    text-align: left;
-  }
-}
-@media screen and (max-width : 570px) {
-  h2 {
-    font-size: 4rem;
-    margin: 0 1rem;
-    margin-top: 1rem;
-    margin-bottom: 1.5rem;
-  }
-  p {
-    font-size: 2rem;
-  }
-  .card-title {
-    text-align: center;
-  }
-}
-
 /* 
  * Takes care of the format of the cards and pictures 
  * to respect the golden ratio.
  */
 .golden-ratio {
-  text-align: center;
   position: relative;
   display: inline-block;
   width: 100%;
@@ -99,6 +66,7 @@ p {
   border-radius: 2px;
   display: table;
   position: absolute;
+  text-align: center;
   opacity: 0;
   margin: auto auto;
   height: 100%;
@@ -149,6 +117,17 @@ p {
 
 .category-title {
   text-align: center;
+}
+
+.vertical-center-wrapper {
+  overflow: hidden;
+  display: table;
+  height: 50%;
+}
+
+.vertical-center {
+  vertical-align: middle;
+  display: table-cell;
 }
 
 .circular {
@@ -231,4 +210,37 @@ ul, ol {
 footer ul {
     list-style: none outside none;
     float: right;
+}
+
+
+/*
+ * Deals with the text size on different screens.
+ */
+@media screen and (max-width : 991px) {
+  h2 {
+    font-size: 5rem;
+    margin: 2rem 3rem;
+  }
+  p {
+    font-size: 3rem;
+  }
+}
+
+@media screen and (max-width : 570px) {
+  h2 {
+    font-size: 4rem;
+    margin: 0 1rem;
+    margin-top: 1rem;
+    margin-bottom: 1.5rem;
+  }
+  p {
+    font-size: 2rem;
+    line-height: 1.2;
+  }
+  .card-title {
+    text-align: center;
+  }
+  .vertical-center-wrapper {
+    height: 45%;
+  }
 }
