--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -147,11 +147,9 @@ p {
 
 .btn-circle {
   background: #66FF00;
-  width: 70px;
-  height: 70px;
-  padding: 10px 16px;
-  font-size: 24px;
-  line-height: 1.33;
+  width: 6.9rem;
+  height: 6.9rem;
+  font-size: 2.4rem;
   text-align: center;
   border-radius: 35px;
 }
