--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -18,6 +18,7 @@ h2 {
 }
 
 p {
+  text-align: justify;
   font-size: 2rem;
   margin: 0 10%;
 }
@@ -57,6 +58,14 @@ p {
   top: 0;
 }
 
+.cover-title {
+
+}
+
+.cover-content {
+  padding: 1rem 0;
+  margin: 1rem;
+}
 /*
  * Formats properly the like button on the picture.
  */
@@ -111,7 +120,6 @@ p {
 
 .card-description {
   vertical-align: middle;
-  text-align: left;
   margin-top: 1rem;
 }
 
@@ -128,6 +136,11 @@ p {
 .vertical-center {
   vertical-align: middle;
   display: table-cell;
+}
+
+.vertical-align {
+  display: flex;
+  align-items: center;
 }
 
 .circular {
@@ -232,13 +245,21 @@ footer ul {
     margin-bottom: 1.5rem;
   }
   p {
-    font-size: 2rem;
+    font-size: 1.8rem;
     line-height: 1.2;
+  }
+  .cover-title {
+    font-size: 4rem;
   }
   .card-title {
     text-align: center;
   }
   .vertical-center-wrapper {
+    /* 
+     * Have not found how to get the
+     * remaining portion of the card.
+     * Used 45% for mobile and 50% for desktop.
+     */
     height: 45%;
   }
 }
